Fix validation errors in example pages

--- a/examples/landmarks/form.html
+++ b/examples/landmarks/form.html
@@ -19,7 +19,7 @@
 
       input[type=submit] {
         margin-bottom: 1em;
-      }  
+      }
 
       fieldset {
         padding: 0.5em;
@@ -82,7 +82,7 @@
             <ul>
               <li>Use the <code>search</code> landmark instead of the <code>form</code> landmark when the form is used for search functionality.</li>
               <li>A <code>form</code> landmark should have a label to help users understand the purpose of the form.</li>
-              <li>A label for the <code>form</code> landmark should be identified using <code>aria-labelledby</ to visible heading element (e.g. an <code>h1-h6</code> element).</li>
+              <li>A label for the <code>form</code> landmark should be identified using <code>aria-labelledby</code> to visible heading element (e.g. an <code>h1-h6</code> element).</li>
               <li>If a page includes more than one <code>form</code> landmark, each should have a unique label.</li>
               <li>
                 Whenever possible, controls contained in a <code>form</code> landmark in an HTML document should use native host semantics:
@@ -114,7 +114,7 @@
                     <fieldset>
                       <legend id="contact">Add Contact</legend>
 
-                      <label for="name">Name</label> 
+                      <label for="name">Name</label>
                       <input id="name" type="text" size="25">
 
                       <label for="email">E-mail</label>
@@ -132,11 +132,11 @@
                     <fieldset>
                       <legend id="organization">Add Organization</legend>
 
-                      <label for="org">Organization</label> 
+                      <label for="org">Organization</label>
                       <input id="org" type="text" size="25">
 
                       <label for="www">WWW</label>
-                      <input id="www" type="text" size="25"></label>
+                      <input id="www" type="text" size="25">
 
                       <input type="submit" value="Add Organization">
                     </fieldset>
@@ -192,7 +192,7 @@
                     <fieldset>
                       <legend id="contact_html5">Add Contact</legend>
 
-                      <label for="name_html5">Name</label> 
+                      <label for="name_html5">Name</label>
                       <input id="name_html5" type="text" size="25">
 
                       <label for="email_html5">E-mail</label>
@@ -210,11 +210,11 @@
                     <fieldset>
                       <legend id="organization_html5">Add Organization</legend>
 
-                      <label for="org_html5">Organization</label> 
+                      <label for="org_html5">Organization</label>
                       <input id="org_html5" type="text" size="25">
 
                       <label for="www_html5">WWW</label>
-                      <input id="www_html5" type="text" size="25"></label>
+                      <input id="www_html5" type="text" size="25">
 
                       <input type="submit" value="Add Organization">
                     </fieldset>
@@ -300,12 +300,12 @@
         </footer>
       </div>
     </div>
-    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>        
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>        
+    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>       
-    <script type="text/javascript" src="js/visua11y.js"></script>        
-    <script type="text/javascript" src="js/show.js"></script>        
+    <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>
+    <script type="text/javascript" src="js/visua11y.js"></script>
+    <script type="text/javascript" src="js/show.js"></script>
     <script type="text/javascript" >
       // Use the SkipTo defaults, but just showing custom configuration
       var SkipToConfig =
@@ -318,6 +318,6 @@
         }
       };
     </script>
-    <script type="text/javascript" src="js/SkipTo.min.js"></script>      
+    <script type="text/javascript" src="js/SkipTo.min.js"></script>
   </body>
 </html>
