--- a/examples/listbox/listbox.html
+++ b/examples/listbox/listbox.html
@@ -279,7 +279,7 @@ while in the second example, they may select multiple options before activating 
         </tr>
         <tr>
           <th><code>role=&quot;option&quot;</code></th>
-          <td><code>li</</code></td>
+          <td><code>li</code></td>
           <td>Identifies each selectable element containing the name of an option.</td>
         </tr>
         <tr>
