--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
 <title>Navigation Menubar Example | WAI-ARIA Authoring Practices 1.1</title>
 <link href="../../css/core.css" rel="stylesheet">
 <link href="../../css/table.css" rel="stylesheet">
@@ -57,8 +56,8 @@
                 <ul role="menu" aria-label="facts">
                   <li role="none">
                     <a role="menuitem" href="mb-about.html#facts">History</a>
-                  </li role="none">
-                  <li>
+                  </li>
+                  <li role="none">
                     <a role="menuitem" href="mb-about.html#facts">Current Statistics</a>
                   </li>
                   <li role="none">
@@ -119,7 +118,7 @@
               </li>
               <li role="none">
                 <a role="menuitem" href="mb-academics.html#online">Online Courses</a>
-              </li role="none">
+              </li>
               <li role="separator"></li>
               <li role="none">
                 <a role="menuitem" href="mb-academics.html#explorer">Course Explorer</a>
