--- a/examples/radio/radio-2/radio-2.html
+++ b/examples/radio/radio-2/radio-2.html
@@ -208,7 +208,7 @@
                  </ul>
             </td>
           </tr>
-          </tr>
+          <tr>
             <th scope="row"><code>radio</code></th>
             <td></td>
             <td><code>li</code></td>
@@ -238,7 +238,7 @@
             <td>
                 <ul>
                   <li>Indentifies the <code>radio</code> button is <strong>not</strong> checked.</li>
-                  <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;false&quote;]</code>) are used to synchornize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                  <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;false&quot;]</code>) are used to synchornize the visual states with the value of the <code>aria-checked</code> attribute.</li>
                   <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property is used to indcate visual state of unchecked to support high contrast setting in operating systems and browsers.</li>
                 </ul>
             </td>
@@ -250,7 +250,7 @@
             <td>
                 <ul>
                   <li>Indentifies the <code>radio</code> button is checked.</li>
-                  <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;ture&quote;]</code>) are used to synchornize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                  <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;true&quot;]</code>) are used to synchornize the visual states with the value of the <code>aria-checked</code> attribute.</li>
                   <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property is used to indcate visual state of checked to support high contrast setting in operating systems and browsers.</li>
                 </ul>
             </td>
@@ -259,6 +259,7 @@
       </table>
 
       </section>
+      <section>
 
         <h2>Javascript and CSS Source Code</h2>
         <ul>
