--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -58,7 +58,7 @@
                 <li role="menuitem">Item 5</li>
                 <li role="menuitem">Item 6</li>
               </ul>
-            </td>
+            </div>
         </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
