--- a/examples/menu-button/menu-button-1/menu-button-1.html
+++ b/examples/menu-button/menu-button-1/menu-button-1.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Menu Button Example: Actions | WAI-ARIA Authoring Practices 1.1</title>
 
     <link href="../../css/core.css" rel="stylesheet">
@@ -9,19 +8,19 @@
     <link href="css/menuButtonAction.css" rel="stylesheet">
 
     <script src="../../js/examples.js" type="text/javascript"></script>
-    <script src="js/Menubutton.js" type="text/javascript"></script> 
-    <script src="js/MenuItemAction.js" type="text/javascript"></script> 
-    <script src="js/PopupMenuAction.js" type="text/javascript"></script> 
+    <script src="js/Menubutton.js" type="text/javascript"></script>
+    <script src="js/MenuItemAction.js" type="text/javascript"></script>
+    <script src="js/PopupMenuAction.js" type="text/javascript"></script>
   </head>
   <body>
     <main>
       <h1>Actions Menu Button Example</h1>
-      <p>This example implements the <a href="../../../#menubutton">menu button design pattern</a> 
+      <p>This example implements the <a href="../../../#menubutton">menu button design pattern</a>
       for a button that provides access to a menu of actions.
-      When an element with role <code>button</code> has <code>aria-haspopup=&quot;true&quot;</code>, 
+      When an element with role <code>button</code> has <code>aria-haspopup=&quot;true&quot;</code>,
       browsers inform assistive technologies that the button is a menu button.
-      This role transformation caused by <code>aria-haspopup</code> happens with any element that is recognized as a button, 
-      including the HTML <code>button</code> and <code>input[type="button"]</code> elements. 
+      This role transformation caused by <code>aria-haspopup</code> happens with any element that is recognized as a button,
+      including the HTML <code>button</code> and <code>input[type="button"]</code> elements.
       </p>
       <p>Similar examples include: </p>
       <ul>
@@ -34,9 +33,9 @@
           <p>This example shows a popup menu of actions that can be used for changing states in a web application.</p>
 
           <div class="menu_button">
-            <button 
+            <button
                 id="menubutton1"
-                aria-haspopup="true" 
+                aria-haspopup="true"
                 aria-expanded="false"
                 aria-controls="menu1"
                 >
@@ -66,22 +65,22 @@
           window.onload=function() {
             var menubutton = new Menubutton(document.getElementById('menubutton1'));
             menubutton.init();
-          }    
+          }
 
           </script>
 
         </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
 
-      </section>    
+      </section>
 
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-        
+
         <h3 id="kbd1_label">Menu Button</h3>
 
-        <table aria-labelledby="kbd1_label kbd_label"> 
+        <table aria-labelledby="kbd1_label kbd_label">
           <thead>
             <tr>
               <th>Key</th>
@@ -90,10 +89,8 @@
           </thead>
           <tbody>
             <tr>
-            <tr>
               <th><kbd>Down Arrow, <br/>Space, <br/>or Enter</kbd></th>
               <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
-            </tr>
             </tr>
             <tr>
               <th><kbd>Up Arrow Key</kbd></th>
@@ -102,9 +99,9 @@
           </tbody>
         </table>
 
-         <h3 id="kb2_label" class="widget">Popup Menu Widget</h3>
+         <h3 id="kbd2_label" class="widget">Popup Menu Widget</h3>
 
-        <table aria-labelledby="kbd2_label kbd_label"> 
+        <table aria-labelledby="kbd2_label kbd_label">
           <thead>
             <tr>
               <th style="min-width: 8em">Key</th>
@@ -127,7 +124,7 @@
                 <ul>
                   <li>Closes popup menu.</li>
                   <li>Moves focus to button menu.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
             <tr>
@@ -136,7 +133,7 @@
                 <ul>
                   <li>Moves focus to previous popup menu item.</li>
                   <li>If first popup menu item, focus is moved to the last popup menu item.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
              <tr>
@@ -145,7 +142,7 @@
                 <ul>
                   <li>Moves focus to next popup menu item.</li>
                   <li>If last popup menu item, focus is moved to the first popup menu item.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
             <tr>
@@ -153,7 +150,7 @@
               <td>
                 <ul>
                   <li>Moves focus to first popup menu item.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
             <tr>
@@ -161,7 +158,7 @@
               <td>
                 <ul>
                   <li>Moves focus to last popup menu item.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
             <tr>
@@ -170,7 +167,7 @@
                 <ul>
                   <li>Moves focus to the next popup item that starts with that letter.</li>
                   <li>If no popup menu item starts with the letter, focus does not move.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
           </tbody>
@@ -244,7 +241,7 @@
                 <td>
                   <ul>
                     <li>Indicates popup menu is open.</li>
-                  </ul>  
+                  </ul>
                 </td>
             </tr>
             <tr>
@@ -254,11 +251,11 @@
                 <td>
                   <ul>
                     <li>Indicates popup menu is closed.</li>
-                  </ul>  
+                  </ul>
                 </td>
             </tr>
           </tbody>
-        </table> 
+        </table>
 
         <h3 id="rps2_label">Popup Menu</h3>
 
@@ -333,19 +330,19 @@
               </td>
             </tr>
           </tbody>
-        </table> 
+        </table>
 
-      </section>    
+      </section>
 
       <section>
         <h2>Javascript and CSS Source Code</h2>
-      
+
         <ul>
           <li>CSS: <a href="css/menuButtonAction.css" type="text/css">MenubuttonAction.css</a></li>
           <li>Javascript: <a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
           <li>Javascript: <a href="js/MenuItemAction.js" type="text/javascript">MenuItemAction.js</a></li>
           <li>Javascript: <a href="js/PopupMenuAction.js" type="text/javascript">PopupMenuAction.js</a></li>
-        </li>    
+        </ul>
       </section>
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
