--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
     <title>File Directory Treeview Example Using Computed Properties | WAI-ARIA Authoring Practices 1.1</title>
 
     <link href="../../css/core.css" rel="stylesheet">
@@ -10,9 +9,9 @@
 
     <link href="css/tree.css" rel="stylesheet">
 
-    <script type="text/javascript" src="js/tree.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/treeitem.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/treeitemClick.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/tree.js"></script>
+    <script type="text/javascript" src="js/treeitem.js"></script>
+    <script type="text/javascript" src="js/treeitemClick.js"></script>
 
     <script src="../../js/examples.js" type="text/javascript"></script>
 
@@ -33,7 +32,7 @@
 
        <section aria-labelledby="start">
         <h2 id="start">Example</h2>
-        <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
+        <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep start" aria-label="Start of"></div>
         <div id="ex1">
          <h3 id="tree_label">
             File Viewer
@@ -242,9 +241,9 @@
             </li>
           </ul>
 
-          <p><label>File or Folder Selected: <input id="last_action" type="output" size="15"></label></p>
+          <p><label>File or Folder Selected: <input id="last_action" type="text" size="15" readonly></label></p>
         </div>
-        <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
+        <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep start" aria-label="End of"></div>
       </section>
 
       <section>
@@ -503,8 +502,6 @@
                   <li>Browsers are encouraged, but not required to compute the <code>aria-level</code> value for a <code>treeitem</code> based on the DOM structure.</li>
                   <li><a href="https://www.w3.org/TR/wai-aria/states_and_properties#aria-level">Browser requirements for computing <code>aria-level</code> values</a>.</li>
                 </ul>
-              </td>
-            </tr>
               </td>
             </tr>
           </tbody>
