--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
     <title>File Directory Treeview Example Using Declared Properties | WAI-ARIA Authoring Practices 1.1</title>
 
     <link href="../../css/core.css" rel="stylesheet">
@@ -10,9 +9,9 @@
 
     <link href="css/tree.css" rel="stylesheet">
 
-    <script type="text/javascript" src="js/tree.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/treeitem.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/treeitemClick.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/tree.js"></script>
+    <script type="text/javascript" src="js/treeitem.js"></script>
+    <script type="text/javascript" src="js/treeitemClick.js"></script>
 
     <script src="../../js/examples.js" type="text/javascript"></script>
   </head>
@@ -32,7 +31,7 @@
 
       <section aria-labelledby="start">
         <h2 id="start">Example</h2>
-        <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
+        <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep start" aria-label="Start of"></div>
         <div id="ex1">
         <h3 id="tree1">File Viewer</h3>
         <ul role="tree" aria-labelledby="tree1">
@@ -407,9 +406,9 @@
             </ul>
           </li>
         </ul>
-        <p><label>File or Folder Selected: <input id="last_action" type="output" size="15"></label></p>
+        <p><label>File or Folder Selected: <input id="last_action" type="text" size="15" readonly></label></p>
         </div>
-        <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
+        <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep start" aria-label="End of"></div>
        </section>
 
        <section>
