--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
     <title>Navigation Treeview Example Using Computed Properties | WAI-ARIA Authoring Practices 1.1</title>
 
     <link href="../../css/core.css" rel="stylesheet">
@@ -10,9 +9,9 @@
 
     <link href="css/treeLinks.css" rel="stylesheet">
 
-    <script type="text/javascript" src="js/treeLinks.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/treeitemLinks.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/treeitemClick.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/treeLinks.js"></script>
+    <script type="text/javascript" src="js/treeitemLinks.js"></script>
+    <script type="text/javascript" src="js/treeitemClick.js"></script>
 
     <script src="../../js/examples.js" type="text/javascript"></script>
   </head>
