--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -148,173 +148,173 @@
       <div id="ex3">
         <div role="grid" aria-label="Search Results" aria-rowcount="19" data-per-page="5" data-wrap-cols="true">
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/WAI/intro/aria">WAI-ARIA Overview
                   Web Accessibility Initiative W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >WAI-ARIA, the Accessible Rich Internet Applications Suite, defines a way to make
               Web content and Web applications more accessible to people with disabilities.</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/states_and_properties">ARIA
                   States and Properties - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >In this document, states and properties are both treated as aria-prefixed markup
               attributes. However, they are maintained conceptually distinct to clarify subtle ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/">Accessible Rich
                   Internet Applications (WAI-ARIA) 1.0 - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Mar 20, 2014 - This is the WAI-ARIA 1.0 W3C Recommendation from the Protocols &
               Formats Working Group of the Web Accessibility Initiative. The Working ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet
                   Applications (ARIA) Working Group - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >The mission of the Accessible Rich Internet Applications Working Group (ARIA WG) is
               to develop technologies that enhance accessibility of web content for ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-1.1/">Accessible Rich
                   Internet Applications (WAI-ARIA) 1.1 - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Jul 21, 2016 - This version of ARIA 1.1 changes the aria-kbdshortcuts property to
               aria-keyshortcuts , expands roles that can be used in combo boxes, adds a ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/roles">The Roles Model |
                   Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >This section defines the WAI-ARIA role taxonomy and describes the characteristics
               and properties of all roles. A formal RDF / OWL representation of all the ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-practices-1.1/">WAI-ARIA
                   Authoring Practices 1.1 - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Mar 17, 2016 - The WAI-ARIA Authoring Practices Guide is intended to provide an
               understanding of how to use WAI-ARIA to create an accessible Rich Internet ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/html-aria/">ARIA in HTML - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Oct 5, 2016 - ARIA in HTML is a [ HTML51 ] specification module. Any HTML features,
               conformance requirements, or terms that this specification module ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/html-aria/">ARIA
                   in HTML</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Jul 24, 2015 - Setting an ARIA role and/or aria-* attribute that matches the
               default implicit ARIA semantics is unnecessary and is NOT RECOMMENDED as ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/WAI/ARIA/faq">Accessible Rich
                   Internet Applications (ARIA) Working Group - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Here are answers to some frequently asked questions (FAQ) about WAI-ARIA, the
               Accessible Rich Internet Applications Suite. When we add significant ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-implementation/">WAI-ARIA
                   1.0 User Agent Implementation Guide - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >WAI-ARIA enables rich Internet applications to have the same accessibility features
               as desktop GUI applications by adding metadata to markup technologies ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://w3c.github.io/html-reference/aria/aria.html">ARIA -
                   HTML5 - W3C on GitHub</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Alertdialog #. aria.alertdialog = role="" alertdialog "" intermixed with an
               optional aria-expanded element. Application #. aria.application = role=""
               application ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/WAI/PF/aria-practices/">WAI-ARIA 1.0
                   Authoring Practices - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Abstract. This document provided readers with an understanding of how to use
               WAI-ARIA [ ARIA ] to create accessible rich internet applications. It described ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/aria-in-html/">Notes on Using
                   ARIA in HTML - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >May 21, 2015 - This document demonstrates how to use WAI-ARIA in [ HTML51 ], which
               especially helps with dynamic content and advanced user interface ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/standards/techs/aria">Accessible
                   Rich Internet Applications (WAI-ARIA) Current Status - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Accessible Rich Internet Applications (WAI-ARIA) 1.0. Accessibility of Web content
               to people with disabilities requires semantic information about widgets, ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/WAI/PF/aria/">Accessible Rich
                   Internet Applications (WAI-ARIA) 1.0 - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Feb 3, 2014 - This version: http://www.w3.org/WAI/PF/aria/; Previous editors'
               draft: ... This document is part of the WAI-ARIA suite described in the WAI-ARIA ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/introduction">Introduction
                   | Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >WAI-ARIA is a technical specification that provides a framework to improve the
               accessibility and interoperability of web content and applications. This
               document ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/usage">Using WAI-ARIA |
                   Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >WAI-ARIA divides the semantics into roles (the type defining a user interface
               element) and states and properties supported by the roles. Authors need to ...</span>
           </div>
           <div role="row">
-            <span role="gridcell"><h3>
+            <div role="gridcell"><h3>
                 <a tabindex="-1" href="https://www.w3.org/TR/WCAG20-TECHS/aria#ARIA11">Using
                   ARIA landmarks to identify regions of a page - WCAG WG - W3C</a>
-              </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
+              </h3></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Jan 3, 2014 - NVDA 2 supports all landmarks except it will not support navigation
               to “application”; Window Eyes as of V.7 does not support ARIA landmarks.</span>
