--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2370,25 +2370,25 @@ A tree that provides navigation to a set of web pages and demonstrates how to ex
 
   <section id="keyboard">
     <h2>Developing a Keyboard Interface</h2>
-
+    <p>
+      This section is work in progress.  
+      Development of the next revision is tracked by 
+      <a href="https://github.com/w3c/aria-practices/issues/220">issue 220.</a>
+    </p>
     <p>
       Unlike native HTML form elements, browsers do not provide keyboard support for graphical user interface (GUI) components that are made accessible with ARIA; authors have to provide the keyboard support in their code.
       This section describes the principles and methods for making the functionality of a web page that includes ARIA widgets, such as menus and grids, as well as interactive components, such as toolbars and dialogs, operable with a keyboard.
       Along with the basics of focus management, this section offers guidance toward the objective of providing experiences to people who rely on a keyboard that are as efficient and enjoyable as the experiences available to others.
-      It covers:
     </p>
-
+      <p>This section covers: </p>
     <ol>
       <li>Understanding fundamental principles of focus movement conventions used in ARIA design patterns.</li>
       <li>Maintaining visible focus, predictable focus movement, and distinguishing between keyboard focus and the selected state.</li>
       <li>Managing movement of keyboard focus between components, e.g., how the focus moves when the <kbd>Tab</kbd> and <kbd>Shift+Tab</kbd> keys are pressed.</li>
       <li>Managing movement of keyboard focus inside components that contain multiple focusable elements, e.g., two different methods for programatically exposing focus inside widgets like radio groups, menus, listboxes, trees, and grids.</li>
-      <li>Managing focus for modal and non-modal dialogs.</li>
       <li>Determining when to make disabled interactive elements focusable.</li>
       <li>Assigning and revealing keyboard shortcuts, including guidance on how to avoid problematic conflicts with keyboard commands of assistive technologies, browsers, and operating systems.</li>
-      <li>Addressing macro navigation concerns, i.e., methods for enabling efficient keyboard access to different sections of a page or site.</li>
     </ol>
-
     <section id="kbd_generalnav">
       <h3>Fundamental Keyboard Navigation Conventions</h3>
 
