Remove unclear pronoun from alert dialog pattern
Modified aria-practices.html:
In the alert dialog design pattern, replaced pronoun "them", which had  an unclear   antecedent, with its object.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -244,7 +244,9 @@
       <p>
         An alert dialog  is a <a href="#dialog_modal">modal dialog</a> that interrupts the user's workflow to communicate an important message and acquire a response.
         Examples include action confirmation prompts and error message confirmations.
-        The <a href="#alertdialog" class="role-reference">alertdialog</a> role enables assistive technologies and browsers to distinguish alert dialogs from other dialogs so they have the option of giving them special treatment, such as playing a system alert sound.
+        The <a href="#alertdialog" class="role-reference">alertdialog</a> role 
+        enables assistive technologies and browsers to distinguish alert dialogs from other dialogs 
+        so they have the option of giving alert dialogs special treatment, such as playing a system alert sound.
       </p>
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
