--- a/aria-practices.html
+++ b/aria-practices.html
@@ -904,31 +904,34 @@
 
     <section class="widget" id="link">
       <h3>Link</h3>
-
-      <p>A <a href="#link" class="role-reference">link</a> widget provides an interactive reference to a resource either locally in the application or to an external resource.</p>
-      <p class="note">Authors are strongly encouraged to use a native host language link element, such as an HTML <code>&lt;A&gt;</code> element with <code>href</code> attribute. As with other WAI-ARIA widget roles, applying the link role to an element will not cause browsers to enhance the element with standard link behaviors such as navigation to the link target or context menu actions. Providing these features of the element is the author's responsibility.</p>
-
+      <p>
+        A <a href="#link" class="role-reference">link</a> widget provides an interactive reference to a resource.
+        The target resource can be either external or local, i.e., either outside or within the current page or application.
+       </p>
+      <p class="note">
+        Authors are strongly encouraged to use a native host language link element, such as an HTML
+        <code>&lt;A&gt;</code> element with an <code>href</code> attribute. As with other WAI-ARIA
+        widget roles, applying the link role to an element will not cause browsers to enhance the
+        element with standard link behaviors, such as navigation to the link target or context menu
+        actions. 
+        When using the <code>link</code> role, providing these features of the element is the author's responsibility.
+      </p>
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
-
         <ul>
-          <li><kbd>Enter</kbd> executes the link and moves focus to the link target.</li>
-          <li><kbd>Shift + F10</kbd> opens associated context menu.</li>
+          <li><kbd>Enter</kbd>: Executes the link and moves focus to the link target.</li>
+          <li><kbd>Shift + F10</kbd>: Opens the link's context menu.</li>
         </ul>
       </section>
-
       <section class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
-          <ul>
-            <li>The element containing the link text has role of <a href="#link" class="role-reference">link</a>.</li>
-          </ul>
+        <p>
+            The element containing the link text or graphic has role of <a href="#link" class="role-reference">link</a>.
+        </p>
       </section>
-
       <section class="notoc">
-        <h4>Example</h4>
-        <ul>
-          <li><a href="examples/link/link.html">Link role examples</a></li>
-        </ul>
+        <h4>Examples</h4>
+        <p><a href="examples/link/link.html">Link Widget Examples</a>: Link widgets constructed from HTML <code>span</code> and <code>div</code> elements.</p>
       </section>
     </section>
 
