Minor editorial revisions to several example subsections in design patterns
modified aria-practices.html:
Made "Example" heading plural when multiple examples are included.
Removed the word "role" from several example link names; we are demonstrating the complete pattern, not just use of the role.
In button design pattern example section, added a description after the link to the example page.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -403,8 +403,8 @@
         </ul>
       </section>
       <section class="notoc">
-        <h4>Example</h4>
-        <p><a href="examples/button/button.html">Button role examples</a></p>
+        <h4>Examples</h4>
+        <p><a href="examples/button/button.html">Button Examples</a>: Examples of clickable HTML <code>div</code> and <code>span</code> elements made into accessible command and toggle buttons.</p>
       </section>
     </section>
 
@@ -533,7 +533,7 @@
       <section class="notoc">
         <h4>Example</h4>
         <p>
-          Development of dialog examples is tracked by
+          Work to develop a dialog example is tracked by
           <a href="https://github.com/w3c/aria-practices/issues/103">issue 103.</a>
         </p>
       </section>
@@ -931,7 +931,7 @@
       </section>
       <section class="notoc">
         <h4>Examples</h4>
-        <p><a href="examples/link/link.html">Link Widget Examples</a>: Link widgets constructed from HTML <code>span</code> and <code>div</code> elements.</p>
+        <p><a href="examples/link/link.html">Link Examples</a>: Link widgets constructed from HTML <code>span</code> and <code>div</code> elements.</p>
       </section>
     </section>
 
@@ -1069,7 +1069,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       </section>
 
       <section class="notoc">
-        <h4>Example</h4>
+        <h4>Examples</h4>
         <p><a href="examples/listbox/listbox.html">Listbox Examples:</a> Two examples of the listbox pattern demonstrating differences between single-select and multi-select implementation as well as the use of action buttons with key shortcuts for arranging items in a list.</p>
       </section>
     </section>
@@ -1227,7 +1227,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       </section>
 
       <section class="notoc">
-        <h4>Example</h4>
+        <h4>Examples</h4>
         <ul>
           <li><a href="examples/menubar/menubar-1/menubar-1.html">Navigation Menubar</a>: Demonstrates a menubar that provides site navigation.</li>
           <li><a href="examples/menubar/menubar-2/menubar-2.html">Editor Menubar</a>: Demonstrates menu radios and menu checkboxes in submenus of a menubar that provides text formatting commands for a text field.</li>
@@ -1261,7 +1261,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       </section>
 
       <section class="notoc">
-        <h4>Example</h4>
+        <h4>Examples</h4>
         <ul>
           <li>
             <a href="examples/menu-button/menu-button-1/menu-button-1.html">Actions Menu Button Example</a>:
@@ -1360,7 +1360,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
             </section>
 
             <section class="notoc">
-                <h4>Example</h4>
+                <h4>Examples</h4>
                 <ul>
                     <li><a href="examples/radio/radio-1/radio-1.html">Radio group example using roving tabindex.</a></li>
                     <li><a href="examples/radio/radio-2/radio-2.html">Radio group example using managed focus with <code>aria-activedescendant</code>.</a></li>
@@ -1402,7 +1402,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       </section>
 
       <section class="notoc">
-        <h4>Example</h4>
+        <h4>Examples</h4>
         <ul>
           <li><a href="examples/slider/slider-1.html">Horizontal Slider Examples (e.g. color picker)</a></li>
           <li><a href="examples/slider/slider-2.html">Vertical and Text Slider Examples (e.g. Thermostat Controls)</a></li>
@@ -1676,7 +1676,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       </section>
 
       <section class="notoc">
-        <h4>Example</h4>
+        <h4>Examples</h4>
         <p><a href="examples/toolbar/toolbar.html">Toolbar Example</a>: A toolbar including buttons, links, and checkboxes that uses roving tabindex to manage focus.</p>
       </section>
     </section>
