--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1378,33 +1378,47 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
 
     <section class="widget" id="slider">
       <h3>Slider</h3>
-
-      <p>A slider is an input where the user selects a value from within a given range. Sliders typically have a slider thumb that when moved will change the current value within the bar or track.</p>
-
+      <p>
+        A slider is an input where the user selects a value from within a given range. 
+        Sliders typically have a slider thumb that can be moved along a bar or track to change the value of the slider.
+        </p>
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
         <ul>
           <li><kbd>Right Arrow</kbd> and <kbd>Up Arrow</kbd>: Increase the value of the slider.</li>
           <li><kbd>Left Arrow</kbd> and <kbd>Down Arrow</kbd>: Decrease the value of the slider.</li>
-          <li><kbd>Home</kbd> and <kbd>End</kbd>: Set the slider to the first and last values of the slider.</li>
-          <li><kbd>Tab</kbd>: Moves focus into and out of the slider.</li>
-          <li><kbd>Page Up</kbd> and <kbd>Page Down</kbd> (Optional): Increment or decrement the slider by an amount larger than the step changes made by the arrow keys.</li>
+          <li><kbd>Home</kbd>: Set the slider to the first allowed value in its range.</li>
+          <li><kbd>End</kbd>: Set the slider to the last allowed value in its range.</li>
+          <li><kbd>Page Up</kbd> (Optional): Increment the slider by an amount larger than the step change made by <kbd>Up Arrow</kbd>.</li>
+          <li><kbd>Page Down</kbd> (Optional): Decrement the slider by an amount larger than the step change made by <kbd>Down Arrow</kbd>.</li>
         </ul>
-
         <ol class="note">
-          <li>Focus is placed on the slider (the visual object that the mouse user would move, also known as the thumb) </li>
-          <li>In some circumstances, an author may reverse the direction of the value change for the keys specified above, e.g., make <kbd>Up Arrow</kbd> decrease the value, if the author is certain doing so will result in a better user experience. </li>
+          <li>Focus is placed on the slider (the visual object that the mouse user would move, also known as the thumb.</li>
+          <li>In some circumstances, reversing the direction of the value change for the keys specified above, e.g., having <kbd>Up Arrow</kbd> decrease the value, could create a more intuitive experience.</li>
         </ol>
       </section>
-
       <section class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
-          <li>The slider control has the role <a class="role-reference" href="#slider">slider</a>.  </li>
-          <li>Sliders require the <a class="property-reference" href="#aria-valuemin">aria-valuemin</a>, <a class="property-reference" href="#aria-valuemax">aria-valuemax</a>, and <a class="property-reference" href="#aria-valuenow">aria-valuenow</a> properties representing the minimum possible value of the slider, the maximum possible value, and the current value.  All of these are decimal numbers.  The minimum and maximum are typically fixed and do not change.  </li>
-          <li>Sometimes the value is not user readable, such as a number for the day of the week, e.g., "1". In those cases, use the <a class="property-reference" href="#aria-valuetext">aria-valuetext</a> property to provide a human readable string for the slider's value, e.g. "Monday". </li>
-          <li>It is recommended that authors provide a visible label for the slider, referencing it using <a href="#aria-labelledby" class="property-reference">aria-labelledby</a>.  </li>
-          <li>If the slider is vertical specify <a class="property-reference" href="#aria-orientation">aria-orientation</a>="vertical"</li>
+          <li>The element serving as the focusable slider control has role <a class="role-reference" href="#slider">slider</a>.</li>
+          <li>The slider element has the <a class="property-reference" href="#aria-valuenow">aria-valuenow</a> property set to a decimal value representing the current value of the slider.</li>
+          <li>The slider element has the <a class="property-reference" href="#aria-valuemin">aria-valuemin</a> property set to a decimal value representing the minimum allowed value of the slider.</li>
+          <li>The slider element has the <a class="property-reference" href="#aria-valuemax">aria-valuemax</a> property set to a decimal value representing the maximum allowed value of the slider.</li>
+          <li>
+          If the value of <code>aria-valuenow</code> is not user-friendly, e.g., the day of the week is represented by a number, the 
+          <a class="property-reference" href="#aria-valuetext">aria-valuetext</a> 
+          property is set to a string that makes the slider value understandable, e.g., &quot;Monday&quot;.
+          </li>
+          <li>
+            If the slider has a visible label, it is referenced by
+            <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> on the slider element. 
+            Otherwise, the slider element has a label provided by 
+            <a href="#aria-label" class="property-reference">aria-label</a>.
+          </li>
+          <li>
+            If the slider is vertically oriented, it has <a class="property-reference" href="#aria-orientation">aria-orientation</a> set to <code>vertical</code>.
+            The default value of <code>aria-orientation</code> for a slider is <code>horizontal</code>.
+          </li>
         </ul>
       </section>
 
